Rename BlackWire navigation template for consistency and prevent conflicts
- Renamed _navigation.html to _blackwire_navigation.html in BlackWire
- Updated all BlackWire templates to use the new template name:
  - blackwire_index.html
  - support.html (2 occurrences)
  - trace.html
  - clusters.html
  - blackwire_dashboard.html
- Now all navigation templates are uniquely named:
  - BlackWire: _blackwire_navigation.html
  - ShadowStack: _shadowstack_navigation.html
- Prevents any future template loading conflicts

--- a/blackwire/templates/blackwire_dashboard.html
+++ b/blackwire/templates/blackwire_dashboard.html
@@ -221,7 +221,7 @@
   </style>
 </head>
 <body class="page">
-  {% from "_navigation.html" import render_nav %}
+  {% from "_blackwire_navigation.html" import render_nav %}
   {{ render_nav('dashboard') }}
 
   <div class="dashboard-container">
