--- a/blackwire/templates/blackwire_index.html
+++ b/blackwire/templates/blackwire_index.html
@@ -353,7 +353,7 @@
 <!-- HERO SECTION -->
 <header class="hero">
   <div class="hero__content">
-    {% from "_navigation.html" import render_nav %}
+    {% from "_blackwire_navigation.html" import render_nav %}
     {{ render_nav('home') }}
 
     <div class="hero__grid" style="margin-top: 2.5rem;">
