--- a/blackwire/templates/clusters.html
+++ b/blackwire/templates/clusters.html
@@ -239,7 +239,7 @@
   </style>
 </head>
 <body class="page">
-  {% from "_navigation.html" import render_nav %}
+  {% from "_blackwire_navigation.html" import render_nav %}
   {{ render_nav('clusters') }}
 
   <main>
