--- a/blackwire/templates/trace.html
+++ b/blackwire/templates/trace.html
@@ -373,7 +373,7 @@
   </style>
 </head>
 <body class="page">
-  {% from "_navigation.html" import render_nav %}
+  {% from "_blackwire_navigation.html" import render_nav %}
   {{ render_nav('trace') }}
 
   <main>
