--- a/personaforge/templates/index.html
+++ b/personaforge/templates/index.html
@@ -353,6 +353,16 @@
       </a>
         <a href="/personaforge/" style="text-decoration: none; color: inherit;">PERSONAFORGE</a>
       </div>
+      <button class="hamburger" aria-label="Toggle navigation menu" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
+      <button class="hamburger" aria-label="Toggle navigation menu" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
       <div class="nav__links">
         <a href="/personaforge/" class="nav__link nav__link--accent">Home</a>
         <a href="/personaforge/dashboard" class="nav__link">Dashboard</a>
