--- a/personaforge/static/css/style.css
+++ b/personaforge/static/css/style.css
@@ -34,6 +34,12 @@ html, body {
 
 /* Navigation */
 .nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  max-width: 100%;
   min-height: 64px;
   display: flex;
   align-items: center;
@@ -42,10 +48,10 @@ html, body {
   padding: 0 2rem;
   border-bottom: 1px solid var(--border-soft);
   background: var(--bg-alt);
-  position: sticky;
-  top: 0;
   z-index: 100;
   flex-wrap: wrap;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 .nav__brand {
