--- a/blackwire/templates/_blackwire_navigation.html
+++ b/blackwire/templates/_blackwire_navigation.html
@@ -172,7 +172,10 @@
   .nav {
     padding: 0.75rem 1rem;
     min-height: 64px;
-    position: relative;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     max-width: 100%;
   }
