--- a/blackwire/templates/_blackwire_navigation.html
+++ b/blackwire/templates/_blackwire_navigation.html
@@ -24,8 +24,8 @@
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   height: var(--nav-height, 64px);
   min-height: 64px;
   display: flex;
